k8s/tbot/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tbot-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /tbot
            pathType: "Prefix"
            backend:
              service:
                name: tbot-client
                port:
                  number: 8085
